--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-networkx==1.11
-numpy==1.11.2
-gensim==0.13.3
-tensorflow (version == 0.12.1)
-joblib (version <= 0.11)
+networkx
+numpy
+gensim
+tensorflow
+joblib
 scikit-learn
 pandas
