--- a/queries_featurization/requirements.txt
+++ b/queries_featurization/requirements.txt
@@ -1,6 +1,6 @@
 networkx==1.11
 numpy==1.11.2
-gensim==0.13.3
-tensorflow (version == 0.12.1)
+gensim==0.12.4
+tensorflow== 0.12.1
 joblib
 scikit-learn 
